Agregar actualización dinámica del título de la ventana con conteo de revisiones y traducciones; corregir nombre del título en la interfaz principal.

--- a/todo.txt
+++ b/todo.txt
@@ -84,6 +84,6 @@
 
 Añade un nuevo layout llamado "Wrapper", que irá al lado derecho del main, haciendo doble click en la esquina inferior derecha, hace una animacion de slide para el lado derecho revelando la nueva interface (en el layout nuevo se puede retornar a main haciendo doble click en la esquina inferior izquierda, hace una animacion de slide volviendo al layout main y mantiene los datos que tenia en "Wrapper" si los hubiera) "Wrapper" sin eliminar los datos que habian en la interface main si los hubiera antes de deslizar ya que se va a trabajar com ambas interfaces para los mismos datos. En la nueva interface este módulo sera muy simple, será una tool para manejar y recortar textos para adequarlos a un formato especifico fuera de la app, en el layout "Wrapper" se presenta un cuadro de texto grande para la entrada del texto que se ira hacer wrapper "recortado", al lado derecho hay un campo numerico para determinar el limite de la cantidad de caracteres que tendrá el wrapper a realizar, en este campo numerico no se permiten letras solo numeros, y abajo un boton llamado "Wrapper NOW" para realizar el wrapper segun la cantidad delimitada en el campo numerico, el wrapper ira recortar el texto lineal introducido saltando la linea en el numero de caracter delimitado, en la logica, si el contenido a wrappear ira cortar una palabra por la mitad, lo hace antes para no afectarla.
 
-Modulo nuevo= "Wrapper"?
 Modulo nuevo= Generador de Report [REVs mensual Calculo sobre directorio de REVs]
 Modulo nuevo= Caracteristicas de REVs, check para productos que se han modificado en ficha e indicacion de MOD hecho. [Control de Cambios]
+Habilitar caching para mejorar la velocidad de respuesta de la aplicación. Que trigger utilizar, en el boot automatico o un call manual (boton o respuesta de accion).
